--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,13 +5,13 @@
 
   prerequisites: |
 
-  test-data: |
+  test-data: 
 
   steps:
 
   expected-result: |
 
----
+
 - summary: |
     
   requirement: |
@@ -19,6 +19,7 @@
   prerequisites: |
     
   test-data: |
+    Нет данных
     
   steps:
     
