--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,8 @@
 ---
 functional:
-  - Пользователь должен иметь возможность играть с любым человеком, с ботом или другом (доступ к лобби по ссылке)
+  - Пользователь должен иметь возможность играть с любым человеком, с ботом или другом (доступ по ссылке)
   - Пользователь должен иметь возможность решать задачи на скорость против другого игрока. 
-  - Внутри лобби оба игрока должны видеть друг у друга редактор с кодом, вывод тестов, могут иметь возможность менять язык программирования во время решения
+  - Внутри игры оба игрока должны видеть друг у друга редактор с кодом, вывод тестов, могут иметь возможность менять язык программирования во время решения
   - Пользователь должен иметь возможность выбирать уровень сложности игры
   - Пользователи должны получать очки за игры, на основе которых строится рейтинг за неделю, месяц и за все время
   - Другие пользователи должны иметь возможность следить за ходом игры, в которой не участвуют
