--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,9 @@
 ---
 functional:
-  - Пользователь должен иметь возможность играть с любым человеком, с ботом или другом (доступ по ссылке)
+  - Пользователь должен иметь возможность играть с любым человеком на сайте, с ботом или другом
   - Пользователь должен иметь возможность решать задачи на скорость против другого игрока. 
-  - Внутри игры оба игрока должны видеть друг у друга редактор с кодом, вывод тестов, могут иметь возможность менять язык программирования во время решения
+  - Внутри игры оба игрока должны видеть друг у друга редактор с кодом, вывод тестов
+  - Внутри игры игрок должен иметь возможность менять язык программирования во время решения
   - Пользователь должен иметь возможность выбирать уровень сложности игры
   - Завершенная игра должна быть доступна в записи для повторного просмотра
   - Задачи должны быть доступны на двух языках — русском и английском
