--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,27 +1,183 @@
 ---
 - summary: |
-
+    Проверка элементов сайта внутри игры
   requirement: |
-
+    Внутри игры оба игрока должны видеть друг у друга редактор с кодом, вывод тестов
   prerequisites: |
-
-  test-data: 
-
-  steps:
-
-  expected-result: |
-
-
-- summary: |
-    
-  requirement: |
-    
-  prerequisites: |
-    
+    Нет данных
   test-data: |
     Нет данных
-    
   steps:
-    
+    - Нажать CREATE A GAME
+    - Выбрать Game Type - With a bot
+    - Нажать Create battle
+    - Нажать на кнопку Run
   expected-result: |
+    Пользователь видит редактор кода обоих игроков и вывод тестов
+
+- summary: |
+    Проверка смены языка решения
+  requirement: |
+    Внутри игры игрок должен иметь возможность менять язык программирования во время решения
+  prerequisites: |
+    Нет данных
+  test-data: 
+    Нет данных
+  steps:
+    - Нажать CREATE A GAME
+    - Выбрать Game Type - With a bot
+    - Нажать Create battle
+    - Нажать на выпадающий список смены языка
+    - Выбрать случайный язык, например Python
+  expected-result: |
+    Язык решения изменен
+
+- summary: |
+    Проверка старта игры с ботом
+  requirement: |
+    Пользователь должен иметь возможность играть с ботом
+  prerequisites: |
+    Нет данных
+  test-data: |
+    Нет данных
+  steps:
+    - Нажать CREATE A GAME
+    - Выбрать Game Type - With a bot
+    - Нажать Create battle
+  expected-result: |
+    Игра с ботом началась
     
+- summary: |
+   Проверка старта игры с человеком
+  requirement: |
+    Пользователь должен иметь возможность играть с любым человеком на сайте
+  prerequisites: |
+    На сайте зарегистрированы две учетные записи, в обе произведен вход
+  test-data: |
+    Учетная запись 1 test1 123qwe
+    Учетная запись 2 test2 456rty
+  steps:
+    - test1 Нажать CREATE A GAME
+    - Выбрать Game Type - With other user
+    - Нажать Create battle
+    - test2 Нажать Fight напротив созданной игры
+  expected-result: |
+    Оба игрока присутствуют в игре
+        
+- summary: |
+    Проверка старта игры с другом
+  requirement: |
+    Пользователь должен иметь возможность играть с другом
+  prerequisites: |
+    На сайте зарегистрированы две учетные записи, в обе произведен вход
+  test-data: |
+    Учетная запись 1 test1 123qwe
+    Учетная запись 2 test2 456rty
+  steps:
+    - test1 Нажать CREATE A GAME
+    - Выбрать Game Type - With a friend
+    - Нажать Select
+    - Выбрать test2 в списке
+    - Нажать Create battle
+    - test2 Принять приглашение в игру
+  expected-result: |
+    Оба игрока присутствуют в игре
+
+- summary: |
+    Проверка смены уровня сложности игры
+  requirement: |
+    Пользователь должен иметь возможность выбирать уровень сложности игры
+  prerequisites: |
+    Нет данных
+  test-data: |
+    Нет данных
+  steps:
+    - Нажать CREATE A GAME
+    - Выбрать случайный уровень сложности в поле Level, например 3 звезды
+  expected-result: |
+    Задачи в поле Choose task меняются при смене уровня сложности
+
+- summary: |
+    Просмотр завершенной игры
+  requirement: |
+    Завершенная игра должна быть доступна в записи для повторного просмотра
+  prerequisites: |
+    Нет данных
+  test-data: |
+    Нет данных
+  steps:
+    - Нажать HISTORY
+    - Нажать Show напротив случайной игры, например верхней в списке
+  expected-result: |
+    Пользователь попадает в проигрыватель записей игр
+
+- summary: |
+    Проверка смены языка задачи
+  requirement: |
+    Задачи должны быть доступны на двух языках — русском и английском
+  prerequisites: |
+    Нет данных
+  test-data: |
+    Нет данных
+  steps:
+    - Нажать CREATE A GAME
+    - Выбрать Game Type - With a bot
+    - Выбрать RU над описанием задачи
+  expected-result: |
+    Текст задачи изменен
+
+- summary: |
+    Проверка отправки сообщений в чате
+  requirement: |
+    На сайте должен быть чат, в котором могут общаться зарегистрированные пользователи
+  prerequisites: |
+    Нет данных
+  test-data: |
+    Нет данных
+  steps:
+    - Ввести случайное сообщение в текстовой строке чата
+    - Нажать Send
+  expected-result: |
+    Введенное сообщение отобразится в чате 
+
+- summary: |
+    Тестирование кроссбраузерности сайта (Firefox)
+  requirement: |
+    Сайт должен быть протестирован на совместимость с последними версиями браузеров
+  prerequisites: |
+    Открыта страница browserstack.com и получен доступ к бесплатному функционалу
+  test-data: |
+    Нет данных
+  steps:
+    - Выбрать в таблице браузер Firefox последней версии
+    - Ввести в адресной строке адрес страницы https://codebattle.hexlet.io 
+  expected-result: |
+    Сайт корректно открывается в браузере Firefox последней версии
+
+- summary: |
+    Тестирование кроссбраузерности сайта (Google Chrome)
+  requirement: |
+    Сайт должен быть протестирован на совместимость с последними версиями браузеров
+  prerequisites: |
+    Открыта страница browserstack.com и получен доступ к бесплатному функционалу
+  test-data: |
+    Нет данных
+  steps:
+    - Выбрать в таблице браузер Google Chrome последней версии
+    - Ввести в адресной строке адрес страницы https://codebattle.hexlet.io 
+  expected-result: |
+    Сайт корректно открывается в браузере Google Chrome последней версии
+
+- summary: |
+    Тестирование кроссбраузерности сайта (Safari)
+  requirement: |
+    Сайт должен быть протестирован на совместимость с последними версиями браузеров
+  prerequisites: |
+    Открыта страница browserstack.com и получен доступ к бесплатному функционалу
+  test-data: |
+    Нет данных
+  steps:
+    - Выбрать в таблице браузер Safari последней версии
+    - Ввести в адресной строке адрес страницы https://codebattle.hexlet.io  
+  expected-result: |
+    Сайт корректно открывается в браузере Safari последней версии
