--- a/test-cases.yml
+++ b/test-cases.yml
@@ -21,7 +21,7 @@
     Внутри игры игрок должен иметь возможность менять язык программирования во время решения
   prerequisites: |
     Нет данных
-  test-data: 
+  test-data: |
     Нет данных
   steps:
     - Нажать CREATE A GAME
