--- a/issues.yml
+++ b/issues.yml
@@ -1,4 +1,5 @@
 ---
 issues:
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/2121"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2080"
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2067"
